# isitfiveoclock.com

./: Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  fly-review-dependabot.yml  fly-review.yml
docker/: Dockerfile
isitfiveoclock/: __init__.py
isitfiveoclock/askthetime/: whattime.py
isitfiveoclock/map/: timezone.py
isitfiveoclock/openai/: client.py
isitfiveoclock/routes/: api_routes.py  image_routes.py  snippet_routes.py
isitfiveoclock/templates/: index.html  isitfiveoclock.html
isitfiveoclock/templates/snippets/: fun_fact.html  map.html
isitfiveoclock/utils/: decorators.py
tests/: conftest.py  test_isitfiveoclock.py  test_openai.py  test_routes.py  test_timezone_map.py
