[project]
name = "isitfiveoclock-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "loguru>=0.7.3",
    "openai>=1.72.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "toml>=0.10.2",
    "typer>=0.15.2",
]
